[package]
name = "boris"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0" }
bevy_obj = "0.13.0"
big-brain = "0.19.0"
big-brain-derive = "0.19.0"
bitflags = "2.4.2"
fastnoise-lite = "=1.0.1"
ndshape = "0.3.0"
ordered-float = "4.2.0"

[patch.crates-io]
big-brain = { git = "https://github.com/zkat/big-brain.git" }

# [profile.dev]bevy = { version = "0.13.0" }
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
