[package]
name = "boris"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy-trait-query = { git = "https://github.com/RobWalt/bevy-trait-query.git", branch = "bevy-0.13" }
bevy = { version = "0.13.0" }
rand = { version = "0.8.5", features = ["small_rng"] }
bevy_obj = "0.13.0"
bitflags = "2.4.2"
fastnoise-lite = "1.1.1"
ndshape = "0.3.0"
ordered-float = "4.2.0"
task_derive = { version = "=0.1.0", path = "./task_derive" }
bevy-trait-query = "0.5.1"
itertools = "0.12.1"


# [profile.dev]bevy = { version = "0.13.0" }
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
